fix scroller template visibility issue

--- a/src/templates/scroller/ScrollerLayout.scss
+++ b/src/templates/scroller/ScrollerLayout.scss
@@ -70,6 +70,14 @@
 
                     width: 70%;
                 }
+
+                .view-body{
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }
         .caption-container
